# ats_sentry_behavior

./: .gitignore  AGENTS.md  README.md
docs/: codex_usage_tutorial.md  codex_workflow.md  slim_loopback_refactor.md  移植.md  融合.md  视觉跟随仿真调试.md
patterns/: codex_debug.md  codex_handoff.md  codex_review.md  codex_task.md
scripts/: codex_brief.sh
sp_vision25/: CMakeLists.txt  readme.md
sp_vision25/assets/demo/: demo.avi
sp_vision25/calibration/: capture.cpp
sp_vision25/configs/: camera.yaml  example.yaml  handeye.yaml  mvs.yaml  uav.yaml
sp_vision25/docs/: AUTO_AIM_WEB_DEBUGGER.md  CALL_SEQUENCE_AND_YAML_MAP.md  calibration_checklist.md  src.md  thread.md  tinympc.md  yolo.md
sp_vision25/io/: CMakeLists.txt
sp_vision25/io/dm_imu/: dm_imu.cpp
sp_vision25/io/gimbal/: gimbal.hpp
sp_vision25/io/ros2/: publish2nav.cpp  publish2nav.hpp  ros2.cpp  ros2.hpp  vision_target.hpp
sp_vision25/src/: auto_aim_debug_mpc.cpp  auto_buff_debug.cpp  auto_buff_debug_mpc.cpp  mt_standard.cpp  sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  sentry_multithread.cpp  standard_mpc.cpp
sp_vision25/tasks/auto_aim/: aimer.cpp  shooter.cpp  target.hpp  tracker.cpp
sp_vision25/tasks/auto_aim/multithread/: commandgener.hpp  mt_detector.cpp
sp_vision25/tasks/auto_aim/planner/: planner.cpp
sp_vision25/tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov8.cpp
sp_vision25/tasks/auto_buff/: yolo11_buff.cpp  yolo11_buff.hpp
sp_vision25/tasks/omniperception/: decider.cpp  decider.hpp
sp_vision25/tests/: gimbal_response_test.cpp  gimbal_test.cpp  handeye_test.cpp  minimum_vision_system.cpp  planner_test.cpp
sp_vision25/tools/: CMakeLists.txt  openvino_utils.hpp  yaml.hpp
src/dependencies/BehaviorTree.ROS2/behaviortree_ros2/include/behaviortree_ros2/: bt_topic_pub_action_node.hpp
src/dependencies/BehaviorTree.ROS2/behaviortree_ros2/src/: tree_execution_server.cpp
src/dependencies/hik_camera_ros2_driver/: CMakeLists.txt  README.md
src/dependencies/rmoss_core/rmoss_util/: CMakeLists.txt
src/loopback_sim/nav2_loopback_sim/: loopback_simulator.py  tf_compat.py  utils.py
src/pb2025_sentry_behavior/: CMakeLists.txt  README.md  RMUC_TEST.md  RMUC_TEST2_README.md  package.xml
src/pb2025_sentry_behavior/behavior_trees/: Project.btproj  models.xml  rmuc_test.xml  rmuc_test2.xml  rmul_2026.xml  vision_test.xml
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/: pb2025_sentry_behavior_server.hpp
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/action/: load_csv_waypoints.hpp  select_supply_point.hpp  select_vision_follow_path.hpp  select_vision_target_path.hpp  set_csv_phase_complete.hpp
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/plugins/condition/: is_csv_phase_complete.hpp  is_friendly_outpost_destroyed.hpp  is_hp_less_than.hpp  is_remain_time_less_than.hpp  is_vision_target_valid.hpp
src/pb2025_sentry_behavior/params/: rmuc_patrol_waypoints.csv  rmuc_test2_patrol.csv  rmuc_waypoints.csv  sentry_behavior.yaml  sentry_behavior_loopback.yaml  sentry_behavior_vision_test.yaml
src/pb2025_sentry_behavior/plugins/action/: load_csv_waypoints.cpp  select_patrol_path.cpp  select_supply_point.cpp  select_vision_follow_path.cpp  select_vision_target_path.cpp  send_nav_through_poses.cpp  set_csv_phase_complete.cpp
src/pb2025_sentry_behavior/plugins/condition/: is_csv_phase_complete.cpp  is_friendly_outpost_destroyed.cpp  is_hp_less_than.cpp  is_path_goal_reached.cpp  is_remain_time_less_than.cpp  is_vision_target_valid.cpp
src/pb2025_sentry_behavior/src/: pb2025_sentry_behavior_server.cpp
src/pb2025_sentry_bringup/: package.xml
src/pb2025_sentry_bringup/launch/: loopback_decision_sim.launch.py  loopback_vision_test.launch.py
src/pb2025_sentry_bringup/scripts/: fake_decision_sim_inputs.py
src/pb2025_sentry_nav/: .gitignore
src/pb2025_sentry_nav/livox_ros_driver2/: .gitignore  CMakeLists.txt  README.md
src/pb2025_sentry_nav/livox_ros_driver2/cmake/modules/: FindLivoxSDK2.cmake
src/pb2025_sentry_nav/livox_ros_driver2/scripts/: setup_livox_sdk2.sh
src/pb2025_sentry_nav/sp_msgs/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/sp_msgs/msg/: AutoaimTargetMsg.msg  EnemyStatusMsg.msg  VisionTargetMsg.msg
src/sp_vision25/: CMakeLists.txt  package.xml  run_auto_aim_debug_mpc_watchdog.sh
src/sp_vision25/calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  calibrate_robotworld_handeye.cpp  capture.cpp  split_video.cpp
src/sp_vision25/configs/: ascento.yaml  calibration.yaml  demo.yaml  sentry.yaml  standard3.yaml  standard4.yaml
src/sp_vision25/docs/: MPC_DEBUG_DIFF_STANDARD3_TUNING.md  MPC_SMALL_GYRO_DEBUG_FIX_SUMMARY.md  autoaim.md  offset_delay_mpc.md
src/sp_vision25/io/: CMakeLists.txt  camera.cpp
src/sp_vision25/io/gimbal/: gimbal.cpp
src/sp_vision25/src/: sentry.cpp  sentry_bp.cpp  sentry_debug.cpp  standard.cpp
src/sp_vision25/tasks/auto_aim/: aimer.cpp  classifier.cpp  detector.cpp  shooter.cpp  solver.cpp  target.cpp  tracker.cpp  yolo.cpp
src/sp_vision25/tasks/auto_aim/multithread/: commandgener.cpp  mt_detector.cpp
src/sp_vision25/tasks/auto_aim/planner/: mpc.md  planner.hpp
src/sp_vision25/tasks/auto_aim/yolos/: yolo11.cpp  yolov5.cpp  yolov8.cpp
src/sp_vision25/tasks/auto_buff/: buff_aimer.cpp  buff_solver.cpp  yolo11_buff.cpp
src/sp_vision25/tasks/omniperception/: decider.cpp
src/sp_vision25/tests/: auto_aim_test.cpp  auto_buff_test.cpp  camera_test.cpp  camera_thread_test.cpp  cboard_test.cpp  detector_video_test.cpp  handeye_test.cpp  multi_usbcamera_test.cpp  publish_test.cpp
src/sp_vision25/tools/: CMakeLists.txt  path.cpp  path.hpp  web_debugger.cpp  web_debugger.hpp  yaml.hpp
