<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sp_vision25</name>
  <version>0.0.0</version>
  <description>RoboMaster vision package for sentry auto-aim, omniperception, and ROS2 fusion publishing.</description>

  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>sp_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
